pom.xml configurations
- Update Dockerfile to copy necessary files and change CMD.
- Update pom.xml files to add necessary plugins and configurations.fix: update Dockerfile and pom.xml configurations

- Update Dockerfile to copy dependencies to a separate folder and adjust jar file path.
- Update pom.xml files to add maven resources and compiler plugins.